// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sku Mutation createProduct Should create product 1`] = `
Object {
  "data": Object {
    "createProduct": Object {
      "id": "g",
      "image": "image1.jpg",
      "name": "product1",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {
        "Cache-Control": Array [
          "max-age=5, public",
        ],
      },
    },
  },
}
`;

exports[`Sku Mutation createProduct Should delete product 1`] = `
Object {
  "data": Object {
    "deleteProduct": Object {
      "message": "Product removed",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {
        "Cache-Control": Array [
          "max-age=5, public",
        ],
      },
    },
  },
}
`;

exports[`Sku Mutation createProduct Should update product 1`] = `
Object {
  "data": Object {
    "updateProduct": Object {
      "id": "h",
      "image": "image1.jpg",
      "name": "product3",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {
        "Cache-Control": Array [
          "max-age=5, public",
        ],
      },
    },
  },
}
`;
